# VibeAndChill

./: .gitignore  README.md  admin.py  forms.py  main.py  models.py  pyproject.toml  routes.py
database/: create_database.sql  delete_update_2.sql  insert_test_data.sql  update_users_table.sql  updated_structure_3.sql  visualition.erd
templates/: about.html  add_product.html  agreement.html  base.html  contacts.html  dashboard.html  edit_product.html  edit_profile.html  index.html  input_form.html  login.html  my_products.html  order_details.html  privacy.html  product_stats.html  products.html  register.html  search_products.html  top_products.html
templates/admin/: admin_profile.html  dashboard.html  edit_product.html  edit_user.html  management.html  master.html  order_details.html  user_details.html
templates/seller/: dashboard.html  order_details.html  product_form.html
templates/user/: checkout.html  dashboard.html  edit_profile.html  order_details.html
tests/: pagespeed_insights.py  test_performance.py  test_security.py
